# esp-idf-sys

./: .gitignore  .gitmodules  BUILD-OPTIONS.md  BUILD_OPTIONS.md  CHANGELOG.md  Cargo.toml  README.md  bindgen.sh  build.rs  build.sh  build_native.rs  build_pio.rs  crates.js  generate_cfg.sh  help.html  index.html  sdkconfig  sdkconfig.h  search-index.js  setenv.sh  settings.html  src-files.js
.cargo/: config  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/configs/: sdkconfig.defaults
.github/workflows/: build.yml  ci-esp-idf-next.yml  ci.yml  publish-dry-run.yml  publish.yml
esp-idf-sys/: Cargo.toml
esp-idf-sys/src/: bindings.h  bindings.rs  lib.rs
esp32-sys/: Cargo.toml
esp32-sys/src/: bindings.rs
esp_idf_sys/: all.html  constant.ACD_DEBUG.html  constant.ADC_CALI_SCHEME_CURVE_FITTING_SUPPORTED.html  constant.AES_128_KEY_BYTES.html  constant.AES_192_KEY_BYTES.html  constant.AES_256_KEY_BYTES.html  constant.AES_BLOCK_BYTES.html  constant.AES_BLOCK_WORDS.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNSPEC.html  constant.AI_ADDRCONFIG.html  constant.AI_ALL.html  constant.AI_CANONNAME.html  constant.AI_NUMERICHOST.html  constant.AI_NUMERICSERV.html  constant.AI_PASSIVE.html  constant.AI_V4MAPPED.html  constant.AM_ARC.html  constant.AM_DIR.html  constant.AM_HID.html  constant.AM_RDO.html  constant.AM_SYS.html  constant.ANT_SEL0_IDX.html  constant.ANT_SEL1_IDX.html  constant.ANT_SEL2_IDX.html  constant.ANT_SEL3_IDX.html  constant.ANT_SEL4_IDX.html  constant.ANT_SEL5_IDX.html  constant.ANT_SEL6_IDX.html  constant.ANT_SEL7_IDX.html  constant.APB_CLK_FREQ.html  constant.APB_CLK_FREQ_ROM.html  constant.API_MSG_DEBUG.html  constant.APP_ELF_SHA256_SZ.html  constant.ARG_CMD_DESCRIPTION_LEN.html  constant.ARG_CMD_NAME_LEN.html  constant.ARG_DSTR_SIZE.html  constant.ARG_ELIMIT.html  constant.ARG_ELONGOPT.html  (+19483 more)
esp_idf_sys/bindings/: constant.CONFIG_ESP_SPI_BUS_LOCK_ISR_FUNCS_IN_IRAM.html  constant.CONFIG_OPENTHREAD_BUS_LATENCY.html  constant.CONFIG_OPENTHREAD_CONSOLE_COMMAND_PREFIX.html  constant.CONFIG_OPENTHREAD_CONSOLE_ENABLE.html  constant.CONFIG_OPENTHREAD_CSL_ACCURACY.html  constant.CONFIG_OPENTHREAD_CSL_UNCERTAIN.html  constant.CONFIG_OPENTHREAD_PACKAGE_NAME.html  constant.CONFIG_OPENTHREAD_PARENT_SEARCH_BACKOFF_INTERVAL_MINS.html  constant.CONFIG_OPENTHREAD_PARENT_SEARCH_CHECK_INTERVAL_MINS.html  constant.CONFIG_OPENTHREAD_PARENT_SEARCH_RESELECT_TIMEOUT_MINS.html  constant.CONFIG_OPENTHREAD_PARENT_SEARCH_RSS_MARGIN.html  constant.CONFIG_OPENTHREAD_PARENT_SEARCH_RSS_THRESHOLD.html  constant.CONFIG_OPENTHREAD_PLATFORM_INFO.html  constant.CONFIG_OPENTHREAD_PREFERRED_CHANNEL_MASK.html  constant.CONFIG_OPENTHREAD_SUPPORTED_CHANNEL_MASK.html  constant.CONFIG_OPENTHREAD_TASK_NAME.html  constant.CONFIG_OPENTHREAD_TASK_PRIORITY.html  constant.CONFIG_OPENTHREAD_TASK_SIZE.html  constant.OT_DNS_MAX_LABEL_SIZE.html  constant.OT_DNS_MAX_NAME_SIZE.html  constant.OT_DNS_TXT_KEY_ITER_MAX_LENGTH.html  constant.OT_DNS_TXT_KEY_MAX_LENGTH.html  constant.OT_DNS_TXT_KEY_MIN_LENGTH.html  constant.OT_IP4_ADDRESS_SIZE.html  constant.OT_IP4_ADDRESS_STRING_SIZE.html  constant.OT_IP4_CIDR_STRING_SIZE.html  constant.OT_NETWORK_DATA_ITERATOR_INIT.html  constant.OT_RADIO_BROADCAST_SHORT_ADDR.html  constant.OT_RADIO_CAPS_ALT_SHORT_ADDR.html  constant.OT_RADIO_CAPS_TRANSMIT_FRAME_POWER.html  constant.OT_RADIO_INVALID_SHORT_ADDR.html  constant.OT_SERVER_DATA_MAX_SIZE.html  constant.OT_SERVICE_DATA_MAX_SIZE.html  constant.OT_SETTINGS_KEY_ACTIVE_DATASET.html  constant.OT_SETTINGS_KEY_BORDER_AGENT_ID.html  constant.OT_SETTINGS_KEY_BR_ON_LINK_PREFIXES.html  constant.OT_SETTINGS_KEY_BR_ULA_PREFIX.html  constant.OT_SETTINGS_KEY_CHILD_INFO.html  constant.OT_SETTINGS_KEY_DAD_INFO.html  constant.OT_SETTINGS_KEY_NETWORK_INFO.html  (+213 more)
examples/: app_desc.rs  std_basics.rs  unsafe_call.rs
main/: hello_world_main.c
patches/: esp32c3_atomics_emul.diff  esp_app_format_weak_v4.3.diff  esp_app_format_weak_v4.4.diff  esp_app_format_weak_v5.0.diff  esp_app_format_weak_v5.diff  i2s_types_master.diff  master_missing_xtensa_atomics_fix.diff  master_restore_link_fragments_for_pio.diff  missing_riscv_atomics_fix.diff  missing_xtensa_atomics_fix.diff  ping_setsockopt_fix.diff  pthread_destructor_fix.diff
resources/cmake_project/: CMakeLists.txt
search.desc/esp_idf_sys/: esp_idf_sys-desc-0-.js  esp_idf_sys-desc-1-.js  esp_idf_sys-desc-2-.js  esp_idf_sys-desc-3-.js
search.index/: 0006cd42d4f6.js  0008ef291601.js  001584faa53e.js  0018e5f7fbc7.js  001a0d32bd25.js  001a40108e50.js  001cb984554b.js  00244a07cae9.js  002ef2d53530.js  003582fe223e.js  0039cdcf0e43.js  004657f3b2d2.js  004d7336e336.js  0072044738d3.js  0076da9d586a.js  007bb38a8656.js  0080cf3b2ea8.js  009b0583ba10.js  009b18b0f894.js  00a7b62aab97.js  00b74363c4a2.js  00be82581c1c.js  00caff161def.js  00d6e093735e.js  00ddc1c2eb08.js  00e2577ca03a.js  00f08042d7ef.js  00f3d93a2dbd.js  00f99e5a4288.js  010501c14a15.js  010528dd5d0f.js  01053254ca74.js  0105be4f6ebd.js  011607cc7fe8.js  012194062966.js  01264c2c3417.js  01281602ded1.js  012cc3d3d9b1.js  012f0c18e548.js  013299aa6401.js  (+4397 more)
search.index/crateNames/: 2cbbaefcff8c.js
search.index/desc/: 0fa47af0495c.js  194a6db91711.js
search.index/entry/: 54b66fafe01e.js  7ca897bd4fc4.js  aef95204eae1.js  fbfca2b124c5.js
search.index/function/: 17c17f5825c3.js  5ff279e8a775.js
search.index/generic_inverted_index/: daaaf2c87858.js
search.index/name/: 0ab95d1f1395.js  84dbd7863b2a.js  b85404a40239.js
search.index/normalizedName/: 450a9570af42.js  8034fe7ab389.js  8906dcf05335.js
search.index/path/: 32633faeea34.js
search.index/type/: 0422e413c4d3.js  5c8dde709cfe.js
src/: alloc.rs  app_desc.rs  atomics.rs  atomics_esp32c3.rs  bindings-for-docs.rs  bindings.h  bindings.rs  bindings_esp32.rs  bindings_esp8266.rs  defaults.rs  error.rs  interrupts.rs  lib.rs  main.rs  mutex.rs  panic.rs  patches.rs  pcnt.rs  pthread_rwlock.rs  start.rs  stdio.rs
src/checks/: libc.rs  mod.rs
src/esp_idf_sys/: app_desc.rs.html  error.rs.html  lib.rs.html  patches.rs.html  start.rs.html
(+172 files in other folders)
