[package]
name = "esp-idf-sys"
version = "0.31.6"
authors = ["Alexey Arbuzov <aarbuzov@termt.com>", "sapir <yasapir@gmail.com>", "Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["sys", "idf", "esp-idf", "esp32"]
description = "Bindings for ESP-IDF (Espressif's IoT Development Framework)"
repository = "https://github.com/esp-rs/esp-idf-sys"
license = "MIT OR Apache-2.0"
readme = "README.md"
links = "esp_idf"
build = "build/build.rs"
documentation = "https://esp-rs.github.io/esp-idf-sys/"

[features]
default = ["std", "native"]

std = []
alloc_handler = []
panic_handler = []
binstart = []
libstart = []

# Use native `esp-idf` tooling to build the `esp-idf`
native = ["embuild/cmake", "embuild/espidf", "strum"]
# Backup: use `platformio` to build the `esp-idf`
pio = ["embuild/pio"]

[dependencies]
paste = "1"

[build-dependencies]
embuild = { version = "0.30", features = ["glob", "kconfig"] }
anyhow = "1"
strum = { version = "0.24", features = ["derive"], optional = true }
regex = "1.5"
bindgen = "0.60"
