[package]
name = "esp-idf-sys"
version = "0.32.1"
authors = ["Alexey Arbuzov <aarbuzov@termt.com>", "sapir <yasapir@gmail.com>", "Ivan Markov <ivan.markov@gmail.com>", "Dominik Gschwind <dominik.gschwind99@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["sys", "idf", "esp-idf", "esp32"]
description = "Bindings for ESP-IDF (Espressif's IoT Development Framework)"
repository = "https://github.com/esp-rs/esp-idf-sys"
license = "MIT OR Apache-2.0"
readme = "README.md"
links = "esp_idf"
build = "build/build.rs"
documentation = "https://esp-rs.github.io/esp-idf-sys/"

[features]
default = ["std", "native"]

std = []
alloc_handler = []
panic_handler = []
binstart = []
libstart = []

# Use native `esp-idf` tooling to build the `esp-idf`
native = ["embuild/cmake", "embuild/espidf"]
# Backup: use `platformio` to build the `esp-idf`
pio = ["embuild/pio"]

[dependencies]
libc = "0.2" # Only to check if the rustc flag `-cfg espidf_time64` is properly defined
build-time = "0.1"   # For esp_app_desc!()
const_format = "0.2" # For esp_app_desc!()

[build-dependencies]
embuild = { version = "0.31.2", features = ["glob", "kconfig"] }
anyhow = "1"
regex = "1.5"
bindgen = "0.63"
cargo_metadata = "0.15"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
envy = "0.4.2"
